fixed minor alignment issues

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -51,7 +51,7 @@ body {
 }
 
 .paths {
-  	height: 67%;
+  	height: 65%;
   	width: 20%;
   	position: fixed;
   	left: 0;
@@ -62,7 +62,7 @@ body {
 }
 
 .friends {
-	height: 67%;
+	height: 64.5%;
 	width: 20%;
 	position: fixed;
 	right: 0;
